--- a/Фінальний проєкт/NotificationsDropdown.html
+++ b/Фінальний проєкт/NotificationsDropdown.html
@@ -17,8 +17,8 @@
                 </button>
             </div>
             <div class="absolute right-0 mt-2 bg-white rounded-lg shadow-2xl z-20 overflow-hidden" style="width:25em;">
-                <div>
-                    <div class="flow-root px-2 py-3">
+                <div class="mt-3">
+                    <div class="flow-root px-2 py-1">
                         <div class="float-left">
                             <div class="flow-root">
                                 <h6 class="float-left px-2 py-1 text-gray-700 text-sm mx-2 pr-2">
@@ -38,18 +38,23 @@
                         </div>
                     </div>
                     <!-- Dropdown menu -->
-                    <div class="border-b">
+                    <div>
                         <div>
                             <div class="m-3">
-                                <button class="w-full flow-root bg-transparent text-gray-700 font-semibold border border-indigo-500 hover:text-black rounded">
-                                    <span class="py-2 px-3 float-left">Всі</span>
-                                    <div class="py-1.5 px-3 float-right"><span class="material-icons md-light"> expand_more </span></div>
-                                </button>
-                        </div>
+                                <select id="notification_type" class="block py-3 px-1 mr-4 w-full text-sm text-gray-700 font-semibold bg-transparent border-0 border-b-2 border-indigo-500 cursor-pointer focus:outline-none focus:ring-0 focus:border-gray-200 peer">
+-                                   <option selected>Всі</option>
+                                    <option value="finance">Борги та переплати</option>
+                                    <option value="assignments">Не здані роботи</option>
+                                    <option value="library">Бібліотека</option>
+                                    <option value="application">Заяви</option>
+                                    <option value="event">Події</option>
+                                    <option value="news">Новини</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
 
-                    <div>
+                    <div class="border-t">
                         <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
                             <div class="inline-flex">
                                 <div class="inline-flex items-center w-full">
@@ -78,32 +83,6 @@
                             </div>
                         </li>
                         <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
-                            <div>
-                                <div class="w-full inline-flex items-center">
-                                    <div class="flex-none">
-                                        <span class="material-icons px-2">
-                                            event
-                                        </span>
-                                    </div>
-                                    <div class="flex-auto">
-                                        <p class="truncate font-bold px-2">
-                                            Назва події
-                                        </p>
-                                    </div>
-                                    <div class="px-2 text-xs flex-none">
-                                        <span>
-                                            1 хв назад
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="block px-12 max-w-24">
-                                <p class="">
-                                    Короткий опис події, створеної користувачем
-                                </p>
-                            </div>
-                        </li>
-                        <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
                             <div class="inline-flex">
                                 <div class="inline-flex flex-row items-center w-full">
                                     <span class="material-icons flex-none px-2">
@@ -116,7 +95,7 @@
                                     </div>
                                     <div class="flex-none px-2 text-xs justify-end">
                                         <span>
-                                            7 дн назад
+                                            1 хв назад
                                         </span>
                                     </div>
                                 </div>
@@ -145,7 +124,7 @@
                                     </div>
                                     <div class="flex-none px-2 text-xs">
                                         <span>
-                                            1 тиж назад
+                                            7 дн назад
                                         </span>
                                     </div>
                                 </div>
@@ -163,11 +142,35 @@
                             <div class="inline-flex">
                                 <div class="inline-flex flex-row items-center w-full">
                                     <span class="material-icons flex-none px-2">
-                                        history_edu
+                                        insert_drive_file
                                     </span>
                                     <div class="flex-auto">
                                         <span class="font-bold pl-2">
-                                            Не здані роботи
+                                            Тип заяви
+                                        </span>
+                                    </div>
+                                    <div class="flex-none px-2 text-xs justify-end">
+                                        <span>
+                                            1 тиж назад
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="block px-12">
+                                <h6>
+                                    Статус
+                                </h6>
+                            </div>
+                        </li>
+                        <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
+                            <div class="inline-flex">
+                                <div class="inline-flex flex-row items-center w-full">
+                                    <span class="material-icons flex-none px-2">
+                                        event
+                                    </span>
+                                    <div class="flex-auto">
+                                        <span class="font-bold pl-2">
+                                            Назва події
                                         </span>
                                     </div>
                                     <div class="flex-none px-2 text-xs justify-end">
@@ -179,75 +182,19 @@
                             </div>
                             <div class="block px-12">
                                 <h6>
-                                    Предмет
-                                </h6>
-                                <h6 class="text-xs text-gray-600">
-                                    Опис завдання
+                                    Короткий опис події, створеної користувачем
                                 </h6>
                             </div>
                         </li>
                         <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
                             <div class="inline-flex">
                                 <div class="inline-flex flex-row items-center w-full">
-                                    <div class="flex-none">
-                                        <span class="material-icons px-2">
-                                            newspaper
-                                        </span>
-                                    </div>
+                                    <span class="material-icons flex-none px-2">
+                                        newspaper
+                                    </span>
                                     <div class="flex-auto">
-                                        <span class="font-bold px-2">
+                                        <span class="font-bold pl-2">
                                             Назва новини
-                                        </span>
-                                    </div>
-                                    <div class="flex-none px-2 text-xs">
-                                        <span>
-                                            1 р назад
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="block pl-12">
-                                <h6>
-                                    Короткий опис новини
-                                </h6>
-                            </div>
-                        </li>
-                        <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
-                            <div class="inline-flex">
-                                <div class="inline-flex flex-row items-center w-full">
-                                    <span class="material-icons flex-none px-2">
-                                        history_edu
-                                    </span>
-                                    <div class="flex-auto">
-                                        <span class="font-bold pl-2">
-                                            Не здані роботи
-                                        </span>
-                                    </div>
-                                    <div class="flex-none px-2 text-xs justify-end">
-                                        <span>
-                                            2 роки назад
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="block px-12">
-                                <h6>
-                                    Предмет
-                                </h6>
-                                <h6 class="text-xs text-gray-600">
-                                    Опис завдання
-                                </h6>
-                            </div>
-                        </li>
-                        <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
-                            <div class="inline-flex">
-                                <div class="inline-flex flex-row items-center w-full">
-                                    <span class="material-icons flex-none px-2">
-                                        insert_drive_file
-                                    </span>
-                                    <div class="flex-auto">
-                                        <span class="font-bold pl-2">
-                                            Тип заяви
                                         </span>
                                     </div>
                                     <div class="flex-none px-2 text-xs justify-end">
@@ -259,7 +206,7 @@
                             </div>
                             <div class="block px-12">
                                 <h6>
-                                    Статус
+                                    Короткий опис новини
                                 </h6>
                             </div>
                         </li>
