--- a/Фінальний проєкт/MainContentNotification.html
+++ b/Фінальний проєкт/MainContentNotification.html
@@ -33,17 +33,17 @@
           <div class="inline-flex flex-col md:flex-row items-center justify-between">
               <div class="flex items-center">
                   <a class="rounded-full focus:outline-none focus:ring-2  focus:bg-indigo-50 focus:ring-indigo-800">
-                      <div class="py-2 px-4 lg:px-8 bg-indigo-100 text-indigo-700 rounded-full text-xs md:text-sm lg:text-base">
+                      <div class="py-2 px-4 lg:px-8 bg-purple-200 text-purple-700 rounded-full text-xs md:text-sm lg:text-base cursor-pointer">
                           <p>Всі</p>
                       </div>
                   </a>
                   <a class="rounded-full focus:outline-none focus:ring-2 focus:bg-indigo-50 focus:ring-indigo-800 ml-2 md:ml-4">
-                      <div class="py-2 px-4 lg:px-8 text-gray-600 hover:text-indigo-700 hover:bg-indigo-100 rounded-full text-xs md:text-sm lg:text-base">
+                      <div class="py-2 px-4 lg:px-8 text-gray-600 hover:text-purple-700 hover:bg-purple-200 rounded-full text-xs md:text-sm lg:text-base cursor-pointer">
                           <p>Непрочитані</p>
                       </div>
                   </a>
                   <a class="rounded-full focus:outline-none focus:ring-2 focus:bg-indigo-50 focus:ring-indigo-800 ml-2 md:ml-4">
-                      <div class="py-2 px-4 lg:px-8 text-gray-600 hover:text-indigo-700 hover:bg-indigo-100 rounded-full text-xs md:text-sm lg:text-base">
+                      <div class="py-2 px-4 lg:px-8 text-gray-600 hover:text-purple-700 hover:bg-purple-200 rounded-full text-xs md:text-sm lg:text-base cursor-pointer">
                           <p>Обрані</p>
                       </div>
                   </a>
